# ableton-mcp

./: CHANGELOG.md  CONTRIBUTING.md  README.md  REDDIT_POST.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
AbletonMCP_M4L/: AbletonMCP.amxd.maxpat  README.md
AbletonMCP_M4L/code/: main.js
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: requirements-rest.txt  rest_api_server.py  server.py
docs/: API_REFERENCE.md  CONFIG.md  MANUAL.md  TOOLS.md  TROUBLESHOOTING.md
examples/: README.md  ollama_example.py
tests/: conftest.py  requirements-test.txt
tests/fixtures/: mock_ableton.py
tests/integration/: test_workflows.py
tests/unit/: test_error_handling.py  test_rest_api.py  test_rest_api_complete.py  test_security.py  test_validation.py
