[project]
name = "ableton-mcp"
version = "2.0.0"
description = "AI-powered Ableton Live control with 80+ tools - supports Claude (MCP), Ollama, OpenAI, and more"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Siddharth Ahuja", email = "ahujasid@gmail.com"}
]
license = {text = "MIT"}
keywords = [
    "ableton",
    "music",
    "production",
    "ai",
    "mcp",
    "ollama",
    "claude",
    "midi",
    "daw",
    "live"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.optional-dependencies]
rest = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]
all = [
    "ableton-mcp[rest]",
]

[project.scripts]
ableton-mcp = "MCP_Server.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["MCP_Server"]

[project.urls]
"Homepage" = "https://github.com/jpoindexter/ableton-mcp"
"Documentation" = "https://github.com/jpoindexter/ableton-mcp#readme"
"Bug Tracker" = "https://github.com/jpoindexter/ableton-mcp/issues"
"Changelog" = "https://github.com/jpoindexter/ableton-mcp/blob/main/CHANGELOG.md"